/* Copyright 2024 The OpenXLA Authors.
Copyright 2025 The ZKX Authors.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
==============================================================================*/

syntax = "proto3";

package zkx.ifrt;

import "zkx/python/ifrt/dtype.proto";
import "zkx/python/ifrt/shape.proto";
import "zkx/python/ifrt/sharding.proto";

// Proto equivalent of C++ `ArraySpec`.
message ArraySpecProto {
  int32 version_number = 1;
  DTypeProto dtype = 2;
  ShapeProto shape = 3;
  ShardingProto sharding = 4;
  optional bytes layout = 5;
}
